--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   },
   "dependencies": {
     "@ffmpeg/ffmpeg": "^0.12.15",
+    "@hookform/resolvers": "^4.1.3",
+    "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.3",
-    "video.js": "^8.21.0"
+    "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.17.2",
+    "video.js": "^8.21.0",
+    "zod": "^3.24.2"
   }
 }
