--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^6.0.11"
   },
   "dependencies": {
+    "@ant-design/plots": "^2.3.3",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hookform/resolvers": "^4.1.3",
     "react-hook-form": "^7.54.2",
