--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ant-design/plots": "^2.3.3",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hookform/resolvers": "^4.1.3",
+    "firebase": "^11.4.0",
     "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
