--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@ant-design/plots": "^2.3.3",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hookform/resolvers": "^4.1.3",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
     "firebase": "^11.4.0",
     "react-hook-form": "^7.54.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.17.2",
+    "typescript": "^5.8.2",
     "video.js": "^8.21.0",
     "zod": "^3.24.2"
   }
