--- a/package.json
+++ b/package.json
@@ -18,16 +18,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.1",
-    "vite": "^6.0.11"
+    "vite": "^6.0.11",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
     "@ant-design/plots": "^2.3.3",
+    "@chakra-ui/react": "^3.16.1",
+    "@emotion/react": "^11.14.0",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hookform/resolvers": "^4.1.3",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
+    "ai": "^4.3.9",
     "firebase": "^11.4.0",
+    "next-themes": "^0.4.6",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.17.2",
