--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "@headlessui/react": "^2.0.0",
+    "@iconify/json": "^2.2.343",
+    "@iconify/tailwind": "^1.2.0",
     "@inertiajs/react": "^2.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@vitejs/plugin-react": "^4.2.0",
