--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.17.2",
     "video.js": "^8.21.0",
     "zod": "^3.24.2"
