--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "^19.0.12",
     "ai": "^4.3.9",
     "firebase": "^11.4.0",
+    "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
