--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@types/react": "^19.0.12",
     "ai": "^4.3.9",
     "firebase": "^11.4.0",
+    "i18next": "^25.7.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
