--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "@emotion/react": "^11.14.0",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hookform/resolvers": "^4.1.3",
+    "@react-spring/three": "^10.0.3",
+    "@react-spring/web": "^10.0.3",
+    "@react-three/drei": "^9.92.0",
+    "@react-three/fiber": "^8.15.0",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
     "ai": "^4.3.9",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.23.25",
     "i18next": "^25.7.0",
     "i18next-browser-languagedetector": "^8.2.0",
-    "lucide-react": "^0.554.0",
+    "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^16.3.5",
@@ -45,6 +50,7 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.17.2",
+    "three": "^0.160.0",
     "video.js": "^8.21.0",
     "zod": "^3.24.2"
   }
