--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
-    "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.17.2",
     "three": "^0.160.0",
