--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@iconify/tailwind": "^1.2.0",
     "@inertiajs/react": "^2.0.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.12",
     "axios": "^1.7.4",
