--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.10",
         "inertiajs/inertia-laravel": "^2.0",
         "kreait/firebase-php": "^7.18",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.1",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.9",
-        "league/flysystem-aws-s3-v3": "3.0",
+        "league/flysystem-aws-s3-v3": "^3.30",
+        "predis/predis": "^3.3",
+        "socialiteproviders/facebook": "^4.1",
+        "socialiteproviders/google": "^4.1",
+        "socialiteproviders/twitter": "^4.1",
+        "spatie/laravel-backup": "^9.3",
+        "spatie/laravel-queueable-action": "^2.16",
+        "spatie/laravel-schedule-monitor": "^4.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
