--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@react-three/fiber": "^8.15.0",
     "@types/node": "^22.13.14",
     "@types/react": "^19.0.12",
+    "@types/react-datepicker": "^6.2.0",
     "ai": "^4.3.9",
+    "date-fns": "^4.1.0",
     "firebase": "^11.4.0",
     "i18next": "^25.7.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
+    "react-datepicker": "^8.10.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.3.5",
