--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "james-heinrich/getid3": "^1.9",
         "kreait/firebase-php": "^7.18",
         "laravel/framework": "^11.31",
+        "laravel/reverb": "^1.6",
         "laravel/sanctum": "^4.1",
         "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.9",
@@ -69,7 +70,7 @@
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite"
+            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74,#e83e8c\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" \"php artisan reverb:start\" --names=server,queue,logs,vite,reverb"
         ]
     },
     "extra": {
