--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sweetalert2": "^11.17.2",
     "three": "^0.160.0",
     "video.js": "^8.21.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.9"
   }
 }
