--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,38 @@
 {
-    "compilerOptions": {
-        "target": "ESNext",
-        "lib": ["DOM", "DOM.Iterable", "ESNext"],
-        "jsx": "react-jsx",
-        "module": "ESNext",
-        "moduleResolution": "node",
-        "allowJs": true,
-        "strict": true,
-        "noEmit": true,
-        "isolatedModules": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true,
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["resources/js/*"],
-            "ziggy-js": ["./vendor/tightenco/ziggy"]
-        },
-        "types": ["vite/client"]
+  "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "jsx": "react-jsx",
+    "module": "ESNext",
+
+    // ¡CAMBIO IMPORTANTE! Usa 'bundler' o 'node16' con Vite
+    "moduleResolution": "bundler", // o "node16" / "nodenext"
+
+    "allowJs": true,
+    "strict": true,
+    "noEmit": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+
+    // Opciones importantes para Vite
+    "useDefineForClassFields": true,
+    "allowSyntheticDefaultImports": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["resources/js/*"],
+      "ziggy-js": ["./vendor/tightenco/ziggy"]
     },
-    "include": ["resources/js/**/*.ts", "resources/js/**/*.tsx", "./vendor/tightenco/ziggy/**/*.js", "resources/js/echo.js"],
-    "exclude": ["node_modules"]
+    "types": ["vite/client", "node"]
+  },
+  "include": [
+    "resources/js/**/*.ts",
+    "resources/js/**/*.tsx",
+    "./vendor/tightenco/ziggy/**/*.js",
+    "resources/js/echo.js"
+  ],
+  "exclude": ["node_modules"]
 }
