feat: Introduce content management, publication scheduling, social media integration, and i18n support, alongside Docker and Vite configuration updates.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,27 @@ laravel
 package-lock.json
 .env.example
 .qodo
+
+
+
+.env.docker
+.env.local
+docker-compose.yml
+docker-compose.override.yml
+Dockerfile
+docker/entrypoint.sh
+docker/entrypoint-dev.sh
+docker/nginx/nginx.conf
+docker/nginx/nginx.conf.dist
+docker/dev.ini
+docker/supervisor
+docker/nginx
+docker/supervisor
+docker/nginx
+phpunit.xml
+phpunit.xml.dist
+nginx.conf
+nginx.conf.dist
+dev.ini
+supervisor
+nginx
