--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-icons": "^5.5.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.3",
+    "styled-components": "^6.1.19",
     "sweetalert2": "^11.17.2",
     "three": "^0.160.0",
     "video.js": "^8.21.0",
