--- a/package.json
+++ b/package.json
@@ -43,18 +43,14 @@
     "i18next": "^25.7.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.555.0",
-    "next-themes": "^0.4.6",
     "react-datepicker": "^8.10.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
-    "react-slick": "^0.30.3",
+    "react-lite-youtube-embed": "^3.3.3",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.19",
-    "sweetalert2": "^11.17.2",
-    "three": "^0.160.0",
-    "video.js": "^8.21.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.9"
   }
