--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^4.1.0",
     "i18next": "^25.7.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "libphonenumber-js": "^1.12.33",
     "lucide-react": "^0.555.0",
     "react-datepicker": "^8.10.0",
     "react-hook-form": "^7.54.2",
@@ -49,6 +50,7 @@
     "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-lite-youtube-embed": "^3.3.3",
+    "react-phone-number-input": "^3.4.14",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.19",
     "zod": "^3.24.2",
