--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-icons": "^5.5.0",
     "react-lite-youtube-embed": "^3.3.3",
     "react-phone-number-input": "^3.4.14",
+    "react-virtuoso": "^4.18.1",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.19",
     "zod": "^3.24.2",
