--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -39,7 +42,6 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^11.0.1"
-
     },
     "autoload": {
         "psr-4": {
@@ -87,12 +89,11 @@
             "pestphp/pest-plugin": true,
             "php-http/discovery": true
         },
-    "audit": {
-        "ignore": [
-            "PKSA-365x-2zjk-pt47"
-        ]
-    
-    }
+        "audit": {
+            "ignore": [
+                "PKSA-365x-2zjk-pt47"
+            ]
+        }
     },
     "minimum-stability": "stable",
     "prefer-stable": true
