--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,13 @@ services:
     volumes:
       - ./:/var/www/html
       - ./storage:/var/www/html/storage
-      - ./docker/php/dev.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./docker/php/php_dev.ini:/usr/local/etc/php/conf.d/local.ini
+      - cf_vendor:/var/www/html/vendor
+      - cf_node_modules:/var/www/html/node_modules
+      - cf_public_build:/var/www/html/public/build
     env_file:
       - .env.docker
+    command: sh -c "php artisan config:clear && php-fpm"
     depends_on:
       pgsql:
         condition: service_healthy
@@ -32,6 +36,9 @@ services:
     volumes:
       - ./:/var/www/html
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - cf_public_build:/var/www/html/public/build
+      - cf_vendor:/var/www/html/vendor
+      - cf_node_modules:/var/www/html/node_modules
     depends_on:
       - app
     networks:
@@ -88,6 +95,8 @@ services:
     command: php artisan queue:work --queue=publishing,publishing:notify,notifications,emails,high,default,low --tries=3 --timeout=90
     volumes:
       - ./:/var/www/html
+      - cf_vendor:/var/www/html/vendor
+      - cf_node_modules:/var/www/html/node_modules
     env_file:
       - .env.docker
     depends_on:
@@ -108,6 +117,8 @@ services:
     command: php artisan reverb:start --host=0.0.0.0 --port=8080
     volumes:
       - ./:/var/www/html
+      - cf_vendor:/var/www/html/vendor
+      - cf_node_modules:/var/www/html/node_modules
     env_file:
       - .env.docker
     ports:
@@ -130,6 +141,8 @@ services:
     command: sh -c "while true; do php artisan schedule:run --no-interaction; sleep 60; done"
     volumes:
       - ./:/var/www/html
+      - cf_vendor:/var/www/html/vendor
+      - cf_node_modules:/var/www/html/node_modules
     env_file:
       - .env.docker
     depends_on:
@@ -142,13 +155,15 @@ services:
     image: node:20-alpine
     container_name: contentflow_vite
     working_dir: /var/www/html
-    command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
+    command: npm run dev -- --host 0.0.0.0
     ports:
       - "5173:5173"
     volumes:
       - ./:/var/www/html
+      - cf_node_modules:/var/www/html/node_modules
+      - cf_public_build:/var/www/html/public/build
     environment:
-      - VITE_HMR_HOST=100.125.246.50
+      - VITE_HMR_HOST=leviathan.tail4af8a1.ts.net
     networks:
       - laravel
 
@@ -159,3 +174,6 @@ networks:
 volumes:
   pgsql_data:
   redis_data:
+  cf_vendor:
+  cf_node_modules:
+  cf_public_build:
