config ngix and php.ini to deploy and run

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name _;
+    server_name leviathan.tail4af8a1.ts.net localhost;
     client_max_body_size 100M;
     root /var/www/html/public;
 
@@ -24,6 +24,9 @@ server {
     gzip_min_length 1024;
     gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json application/javascript;
 
+    # Resolver para DNS interno de Docker (más rápido)
+    resolver 127.0.0.11 valid=30s;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
@@ -38,8 +41,18 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param PHP_VALUE "upload_max_filesize=100M \n post_max_size=100M";
-        fastcgi_buffering off;
+
+        # Optimización de Buffers
+        fastcgi_buffering on;
+        fastcgi_buffer_size 32k;
+        fastcgi_buffers 16 16k;
+        fastcgi_busy_buffers_size 64k;
+        fastcgi_temp_file_write_size 64k;
+        fastcgi_connect_timeout 60;
+        fastcgi_send_timeout 300;
         fastcgi_read_timeout 300;
+
+        fastcgi_hide_header X-Powered-By;
     }
 
     # Static files caching
