--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -31,16 +31,16 @@ session.gc_maxlifetime = 1440
 
 ; OPcache
 opcache.enable = 1
-opcache.enable_cli = 0
-opcache.memory_consumption = 256
-opcache.interned_strings_buffer = 16
-opcache.max_accelerated_files = 10000
-opcache.revalidate_freq = 2
+opcache.enable_cli = 1
+opcache.memory_consumption = 512
+opcache.interned_strings_buffer = 64
+opcache.max_accelerated_files = 32531
+opcache.revalidate_freq = 0
 opcache.fast_shutdown = 1
 opcache.validate_timestamps = 1
 
 ; Realpath cache
-realpath_cache_size = 4096K
+realpath_cache_size = 16M
 realpath_cache_ttl = 600
 
 ; Other settings
