--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "james-heinrich/getid3": "^1.9",
         "kreait/firebase-php": "^7.18",
         "laravel/framework": "^11.31",
+        "laravel/octane": "^2.13",
         "laravel/reverb": "^1.6",
         "laravel/sanctum": "^4.1",
         "laravel/socialite": "^5.23",
