--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
       context: .
       dockerfile: Dockerfile
       target: production
+      args:
+        VITE_REVERB_APP_KEY: "${REVERB_APP_KEY}"
+        VITE_REVERB_HOST: "${VITE_REVERB_HOST}"
+        VITE_REVERB_PORT: "${REVERB_PORT}"
+        VITE_REVERB_SCHEME: "${REVERB_SCHEME}"
     container_name: contentflow_app
     restart: unless-stopped
     working_dir: /var/www/html
@@ -12,12 +17,17 @@ services:
       - ./:/var/www/html
       - ./storage:/var/www/html/storage
       - ./docker/php/php_dev.ini:/usr/local/etc/php/conf.d/local.ini
-      - cf_vendor:/var/www/html/vendor
-      - cf_node_modules:/var/www/html/node_modules
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
       - cf_public_build:/var/www/html/public/build
     env_file:
       - .env.docker
-    command: sh -c "php artisan config:clear && php-fpm"
+    ports:
+      - "80:8080"
+    environment:
+      - LARAVEL_OCTANE=1
+      - OCTANE_SERVER=swoole
+    command: php artisan octane:start --server=swoole --host=0.0.0.0 --port=8080
     depends_on:
       pgsql:
         condition: service_healthy
@@ -26,23 +36,6 @@ services:
     networks:
       - laravel
 
-  # Nginx
-  nginx:
-    image: nginx:alpine
-    container_name: contentflow_nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-    volumes:
-      - ./:/var/www/html
-      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - cf_public_build:/var/www/html/public/build
-      - cf_vendor:/var/www/html/vendor
-      - cf_node_modules:/var/www/html/node_modules
-    depends_on:
-      - app
-    networks:
-      - laravel
   # PostgreSQL
   pgsql:
     image: postgres:15-alpine
@@ -95,8 +88,8 @@ services:
     command: php artisan queue:work --queue=publishing,publishing:notify,notifications,emails,high,default,low --tries=3 --timeout=90
     volumes:
       - ./:/var/www/html
-      - cf_vendor:/var/www/html/vendor
-      - cf_node_modules:/var/www/html/node_modules
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
     env_file:
       - .env.docker
     depends_on:
@@ -117,8 +110,8 @@ services:
     command: php artisan reverb:start --host=0.0.0.0 --port=8080
     volumes:
       - ./:/var/www/html
-      - cf_vendor:/var/www/html/vendor
-      - cf_node_modules:/var/www/html/node_modules
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
     env_file:
       - .env.docker
     ports:
@@ -141,12 +134,27 @@ services:
     command: sh -c "while true; do php artisan schedule:run --no-interaction; sleep 60; done"
     volumes:
       - ./:/var/www/html
-      - cf_vendor:/var/www/html/vendor
-      - cf_node_modules:/var/www/html/node_modules
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
     env_file:
       - .env.docker
     depends_on:
       - app
+      - redis
+    networks:
+      - laravel
+
+  # Redis Commander (Web UI)
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: contentflow_redis_commander
+    restart: unless-stopped
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    depends_on:
+      - redis
     networks:
       - laravel
 
@@ -160,7 +168,7 @@ services:
       - "5173:5173"
     volumes:
       - ./:/var/www/html
-      - cf_node_modules:/var/www/html/node_modules
+      - cf_node_modules_v2:/var/www/html/node_modules
       - cf_public_build:/var/www/html/public/build
     environment:
       - VITE_HMR_HOST=leviathan.tail4af8a1.ts.net
@@ -174,6 +182,6 @@ networks:
 volumes:
   pgsql_data:
   redis_data:
-  cf_vendor:
-  cf_node_modules:
+  cf_vendor_v2:
+  cf_node_modules_v2:
   cf_public_build:
