--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,12 @@ primary_region = "gru"
     VITE_REVERB_APP_KEY = "contenflow-key"
     VITE_REVERB_HOST = "contenflow.fly.dev"
 
+[processes]
+  app = "php artisan octane:start --server=swoole --host=0.0.0.0 --port=8080"
+  queue = "php artisan queue:work --queue=publishing,publishing:notify,notifications,emails,high,default,low --tries=3 --timeout=90"
+  scheduler = "sh -c 'while true; do php artisan schedule:run --no-interaction; sleep 60; done'"
+  reverb = "php artisan reverb:start --host=0.0.0.0 --port=8081"
+
 [[services]]
   protocol = "tcp"
   internal_port = 8080
@@ -27,6 +33,15 @@ primary_region = "gru"
     path = "/favicon.ico"
     timeout = "5s"
     grace_period = "1200s"
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 8081
+  processes = ["reverb"]
+
+  [[services.ports]]
+    port = 6001
+    handlers = ["tls", "http"]
 
 [[vm]]
   memory = "512mb"
