--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@iconify/tailwind": "^1.2.0",
     "@inertiajs/react": "^2.0.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@types/react-dom": "^19.2.3",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.12",
     "axios": "^1.7.4",
+    "chokidar": "^3.6.0",
     "concurrently": "^9.0.1",
     "laravel-echo": "^2.2.6",
     "laravel-vite-plugin": "^1.2.0",
@@ -36,7 +37,7 @@
     "@react-three/drei": "^9.92.0",
     "@react-three/fiber": "^8.15.0",
     "@types/node": "^22.13.14",
-    "@types/react": "^19.2.7",
+    "@types/react": "^18.2.0",
     "@types/react-datepicker": "^6.2.0",
     "ai": "^4.3.9",
     "date-fns": "^4.1.0",
