fix reverb nad create vm

--- a/fly.toml
+++ b/fly.toml
@@ -41,12 +41,12 @@ primary_region = "gru"
     port = 443
     handlers = ["tls", "http"]
 
-  [[services.http_checks]]
-    interval = "30s"
-    method = "get"
-    path = "/up"
-    timeout = "5s"
-    grace_period = "120s"
+[[services.http_checks]]
+  interval = "30s"
+  method = "get"
+  path = "/up"
+  timeout = "5s"
+  grace_period = "1200s"
 
 [[services]]
   protocol = "tcp"
@@ -64,7 +64,7 @@ primary_region = "gru"
   processes = ["app", "queue", "scheduler"]
 
 [[vm]]
-  memory = "256mb"
+  memory = "1gb"
   cpu_kind = "shared"
   cpus = 1
   processes = ["reverb"]
