--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
   "dependencies": {
     "@ant-design/plots": "^2.3.3",
     "@aws-sdk/client-s3": "^3.975.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@hookform/resolvers": "^4.1.3",
     "@types/node": "^22.13.14",
