--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@hookform/resolvers": "^4.1.3",
     "@types/node": "^22.13.14",
     "@types/react": "^18.2.0",
