--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "@types/node": "^22.13.14",
     "@types/react": "^18.2.0",
     "@types/react-datepicker": "^6.2.0",
-    "ai": "^4.3.9",
+    "ai": "^6.0.85",
     "date-fns": "^4.1.0",
     "i18next": "^25.7.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "libphonenumber-js": "^1.12.33",
     "lucide-react": "^0.555.0",
     "react-datepicker": "^8.10.0",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.3.5",
@@ -64,5 +65,8 @@
     "ziggy-js": "^1.4.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.9"
+  },
+  "overrides": {
+    "qs": "^6.14.2"
   }
 }
