--- a/docker/php/custom.ini
+++ b/docker/php/custom.ini
@@ -36,8 +36,8 @@ realpath_cache_ttl = 600
 expose_php = Off
 allow_url_fopen = On
 
-; Extensions for testing and database support
-extension=pdo_pgsql
-extension=pdo_sqlite
-extension=pgsql
-extension=sqlite3
+; Extensions are handled by the Docker image build
+; extension=pdo_pgsql
+; extension=pdo_sqlite
+; extension=pgsql
+; extension=sqlite3
