--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "james-heinrich/getid3": "^1.9",
         "kreait/firebase-php": "^7.18",
         "laravel/framework": "^11.31",
+        "laravel/horizon": "^5.44",
         "laravel/octane": "^2.13",
         "laravel/reverb": "^1.6",
         "laravel/sanctum": "^4.1",
@@ -34,7 +35,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
-        "jasonmccreary/laravel-test-assertions": "^2.4",
+        "jasonmccreary/laravel-test-assertions": "^2.8",
         "laravel-shift/blueprint": "^2.11",
         "laravel/breeze": "^2.3",
         "laravel/pail": "^1.1",
