--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@iconify/json": "^2.2.343",
     "@iconify/tailwind": "^1.2.0",
     "@inertiajs/react": "^2.0.0",
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
