--- a/docker/php/php_dev.ini
+++ b/docker/php/php_dev.ini
@@ -2,42 +2,47 @@
 date.timezone = UTC
 
 [PHP]
+; Desarrollo: sin límites de tiempo
 max_execution_time = 0
 max_input_time = 0
-memory_limit = 1G
+memory_limit = 2G
 
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
-display_errors = Off
-display_startup_errors = Off
+; Mostrar todos los errores en desarrollo
+error_reporting = E_ALL
+display_errors = On
+display_startup_errors = On
 log_errors = On
-error_log = /var/log/php/error.log
+error_log = /dev/stderr
 
+; Uploads grandes para desarrollo
 file_uploads = On
 upload_max_filesize = 20G
 max_file_uploads = 20
 post_max_size = 20G
 
+; Sesiones en Redis
 session.save_handler = redis
 session.save_path = "tcp://contentflow_redis_dev:6379"
 session.gc_maxlifetime = 1440
 
+; OPcache optimizado para desarrollo (revalidación constante)
 opcache.enable = 1
 opcache.enable_cli = 1
-opcache.memory_consumption = 128
+opcache.memory_consumption = 256
 opcache.interned_strings_buffer = 16
 opcache.max_accelerated_files = 32531
 opcache.revalidate_freq = 0
 opcache.fast_shutdown = 1
 opcache.validate_timestamps = 1
+opcache.file_update_protection = 0
 
-realpath_cache_size = 16M
-realpath_cache_ttl = 600
+; Caché de rutas optimizado
+realpath_cache_size = 32M
+realpath_cache_ttl = 120
 
+; Seguridad básica
 expose_php = Off
 allow_url_fopen = On
 
-; Extensions are handled by the Docker image build
-; extension=pdo_pgsql
-; extension=pdo_sqlite
-; extension=pgsql
-; extension=sqlite3
+; Swoole optimizations
+swoole.use_shortname = On
