--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,19 +1,29 @@
 services:
+  # Laravel Application (PHP-FPM)
   app:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: contentflow_app
+      target: development
+    container_name: contentflow_app_dev
     restart: unless-stopped
     working_dir: /var/www/html
     volumes:
-      - ./:/var/www/html:cached
+      - ./:/var/www/html
+      - ./storage:/var/www/html/storage
+      - ./docker/php/php_dev.ini:/usr/local/etc/php/conf.d/local.ini
+      - ./docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
+      - cf_public_build:/var/www/html/public/build
     env_file:
       - .env.docker
+    # ports:
+    #   - "80:8080"
     environment:
       - LARAVEL_OCTANE=1
       - OCTANE_SERVER=swoole
-    command: /start.sh
+    command: php artisan octane:start --server=swoole --host=0.0.0.0 --port=8080 --watch
     depends_on:
       pgsql:
         condition: service_healthy
@@ -22,14 +32,15 @@ services:
     networks:
       - laravel
 
+  # Nginx Reverse Proxy
   nginx:
     image: nginx:alpine
-    container_name: contentflow_nginx
+    container_name: contentflow_nginx_dev
     restart: unless-stopped
     ports:
       - "80:80"
     volumes:
-      - ./:/var/www/html:cached
+      - ./:/var/www/html
       - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
@@ -37,9 +48,10 @@ services:
     networks:
       - laravel
 
+  # PostgreSQL
   pgsql:
     image: postgres:15-alpine
-    container_name: contentflow_pgsql
+    container_name: contentflow_pgsql_dev
     restart: unless-stopped
     ports:
       - "5432:5432"
@@ -53,15 +65,16 @@ services:
       - pgsql_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME}"]
-      interval: 5s
-      timeout: 3s
-      retries: 3
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - laravel
 
+  # Redis
   redis:
     image: redis:7-alpine
-    container_name: contentflow_redis
+    container_name: contentflow_redis_dev
     restart: unless-stopped
     ports:
       - "6379:6379"
@@ -69,22 +82,27 @@ services:
       - redis_data:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 3
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - laravel
 
+  # Queue Worker
   queue:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: contentflow_queue
+      target: development
+    container_name: contentflow_queue_dev
     restart: unless-stopped
     working_dir: /var/www/html
-    command: sh -c "composer install --no-interaction && php artisan queue:work --queue=publishing,publishing:notify,notifications,emails,high,default,low --tries=3 --timeout=90"
+    command: sh -c "if [ \"$$QUEUE_CONNECTION\" = \"redis\" ]; then php artisan horizon; else php artisan queue:work --queue=publishing,publishing:notify,notifications,emails,high,default,low --tries=3; fi"
     volumes:
-      - ./:/var/www/html:cached
+      - ./:/var/www/html
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
+      - ./docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
     env_file:
       - .env.docker
     depends_on:
@@ -93,44 +111,98 @@ services:
     networks:
       - laravel
 
+  # Reverb
   reverb:
     build:
       context: .
       dockerfile: Dockerfile.dev
-    container_name: contentflow_reverb
+      target: development
+    container_name: contentflow_reverb_dev
     restart: unless-stopped
     working_dir: /var/www/html
-    command: sh -c "composer install --no-interaction && php artisan reverb:start --host=0.0.0.0 --port=8080 --debug"
+    command: php artisan reverb:start --host=0.0.0.0 --port=8080
     volumes:
-      - ./:/var/www/html:cached
+      - ./:/var/www/html
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
+      - ./docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
     env_file:
       - .env.docker
     ports:
       - "8081:8080"
     depends_on:
+      - app
       - redis
     networks:
       - laravel
 
+  # Scheduler
+  scheduler:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+      target: development
+    container_name: contentflow_scheduler_dev
+    restart: unless-stopped
+    working_dir: /var/www/html
+    command: sh -c "while true; do php artisan schedule:run --no-interaction; sleep 60; done"
+    volumes:
+      - ./:/var/www/html
+      - cf_vendor_v2:/var/www/html/vendor
+      - cf_node_modules_v2:/var/www/html/node_modules
+      - ./docker/php/custom.ini:/usr/local/etc/php/conf.d/custom.ini
+    env_file:
+      - .env.docker
+    depends_on:
+      - app
+      - redis
+    networks:
+      - laravel
+
+  # Redis Commander (Web UI)
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    container_name: contentflow_redis_commander_dev
+    restart: unless-stopped
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8082:8081"
+    depends_on:
+      - redis
+    networks:
+      - laravel
+
+  # vite
   vite:
     image: node:20-alpine
-    container_name: contentflow_vite
+    container_name: contentflow_vite_dev
     working_dir: /var/www/html
     command: sh -c "npm install && npm run dev -- --host 0.0.0.0"
     ports:
       - "5173:5173"
     volumes:
-      - ./:/var/www/html:cached
+      - ./:/var/www/html
+      - cf_node_modules_v2:/var/www/html/node_modules
+      - cf_public_build:/var/www/html/public/build
     environment:
       - VITE_HMR_HOST=${VITE_HMR_HOST:-localhost}
-      - CHOKIDAR_USEPOLLING=true
     networks:
       - laravel
 
 networks:
   laravel:
+    name: contentflow_network_dev
     driver: bridge
 
 volumes:
   pgsql_data:
+    name: contentflow_pgsql_data_dev
   redis_data:
+    name: contentflow_redis_data_dev
+  cf_vendor_v2:
+    name: contentflow_vendor_dev
+  cf_node_modules_v2:
+    name: contentflow_node_modules_dev
+  cf_public_build:
+    name: contentflow_public_build_dev
