--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,6 +1,3 @@
-# ========================================
-# ContentFlow - Configuración de Desarrollo
-# ========================================
 
 # Aplicación
 APP_NAME=ContentFlow
@@ -46,7 +43,7 @@ VITE_DEV_SERVER_URL=http://localhost:5173
 
 # Reverb WebSocket
 REVERB_APP_ID=196492
-REVERB_APP_KEY=yzxbzxdrabdtnaekoqmm
+REVERB_APP_KEY=
 REVERB_APP_SECRET=sevnyhcflpuelgfd2uhv
 REVERB_HOST=reverb
 REVERB_PORT=8080
