--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -9,7 +9,7 @@ max_execution_time = 300
 max_input_time = 300
 
 ; Memory limit
-memory_limit = 512M
+memory_limit = 2G
 
 ; Error reporting
 error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
