chore: update dependencies and configuration
- Update package.json with new frontend dependencies

- Update composer.json with new PHP dependencies

- Update TypeScript configuration for new features

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     "resources/js/**/*.tsx",
     "./vendor/tightenco/ziggy/**/*.js",
     "resources/js/echo.js"
-, "resources/js/Composables/useContentValidation.ts", "resources/js/Composables/usePublishPreview.js"  ],
+, "resources/js/Composables/useContentValidation.ts", "resources/js/Composables/usePublishPreview.js", "tests/Javascript/Utils/emptyStateMapper.test.ts"  ],
   "exclude": ["node_modules"]
 }
