--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "giorgiosironi/eris": "*",
         "jasonmccreary/laravel-test-assertions": "^2.8",
         "laravel-shift/blueprint": "^2.11",
         "laravel/breeze": "^2.3",
