--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.4",
     "chokidar": "^3.6.0",
     "concurrently": "^9.0.1",
+    "fast-check": "^4.5.3",
     "jsdom": "^27.4.0",
     "laravel-echo": "^2.2.6",
     "laravel-vite-plugin": "^1.2.0",
@@ -43,6 +44,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@ffmpeg/ffmpeg": "^0.12.15",
+    "@floating-ui/react": "^0.27.18",
     "@hookform/resolvers": "^4.1.3",
     "@types/node": "^22.13.14",
     "@types/react": "^18.2.0",
