--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "abraham/twitteroauth": "^8.1",
         "doctrine/dbal": "^4.4",
         "dompdf/dompdf": "^3.1",
+        "ezyang/htmlpurifier": "^4.19",
         "guzzlehttp/guzzle": "^7.10",
         "inertiajs/inertia-laravel": "^2.0",
         "james-heinrich/getid3": "^1.9",
@@ -26,6 +27,7 @@
         "laravel/tinker": "^2.9",
         "league/flysystem-aws-s3-v3": "^3.30",
         "maatwebsite/excel": "^3.1",
+        "pragmarx/google2fa-laravel": "^2.3",
         "predis/predis": "^3.3",
         "socialiteproviders/facebook": "^4.1",
         "socialiteproviders/google": "^4.1",
