--- a/package.json
+++ b/package.json
@@ -34,8 +34,14 @@
     "tailwindcss": "^3.2.1",
     "typescript": "^5.8.3",
     "vite": "^6.0.11",
+    "vite-plugin-pwa": "^1.2.0",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^4.0.18"
+    "vitest": "^4.0.18",
+    "workbox-core": "^7.4.0",
+    "workbox-precaching": "^7.4.0",
+    "workbox-routing": "^7.4.0",
+    "workbox-strategies": "^7.4.0",
+    "workbox-window": "^7.4.0"
   },
   "dependencies": {
     "@ant-design/plots": "^2.3.3",
@@ -51,6 +57,7 @@
     "@types/react-datepicker": "^6.2.0",
     "ai": "^6.0.85",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.34.2",
     "i18next": "^25.7.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "libphonenumber-js": "^1.12.33",
@@ -63,7 +70,6 @@
     "react-icons": "^5.5.0",
     "react-lite-youtube-embed": "^3.3.3",
     "react-phone-number-input": "^3.4.14",
-    "react-virtuoso": "^4.18.1",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.19",
     "ziggy-js": "^1.4.0",
