docs: update documentation and Docker configuration
- Update README.md with comprehensive project documentation

- Update Dockerfile with production optimizations

- Update Dockerfile.dev for development environment

- Add setup instructions and feature documentation

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -27,12 +27,20 @@ RUN apk add --no-cache \
     gcc \
     libc-dev \
     re2c \
-    file
+    file \
+    freetype-dev \
+    libjpeg-turbo-dev \
+    libpng-dev \
+    libwebp-dev
 
 # ----------------------------------------------------
 # 2. PHP extensions (Redis, Swoole, PostgreSQL, etc.) - igual que producción
 # ----------------------------------------------------
-RUN pecl install redis swoole \
+RUN docker-php-ext-configure gd \
+        --with-freetype \
+        --with-jpeg \
+        --with-webp \
+    && pecl install redis swoole \
     && docker-php-ext-enable redis swoole \
     && docker-php-ext-install \
         pdo \
@@ -45,7 +53,8 @@ RUN pecl install redis swoole \
         posix \
         xsl \
         bcmath \
-        sockets
+        sockets \
+        gd
 
 # ----------------------------------------------------
 # 3. PHP configuration para DEV (sin opcache para hot-reload)
