--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@floating-ui/react": "^0.27.18",
     "@hookform/resolvers": "^4.1.3",
+    "@tanstack/react-query": "^5.90.21",
     "@types/node": "^22.13.14",
     "@types/react": "^18.2.0",
     "@types/react-datepicker": "^6.2.0",
@@ -62,6 +63,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "libphonenumber-js": "^1.12.33",
     "lucide-react": "^0.555.0",
+    "qrcode.react": "^4.2.0",
     "react-datepicker": "^8.10.0",
     "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.54.2",
